Using Records instead of Plain DTO to reduce boilerplate code
Adding more robust test cases,validation mechanism and better exceptional handling